# ads

./: .env_example  Makefile  README.md  docker-compose.yml
ads/: __main__.py
ads/ci/: Dockerfile  requirements.txt
ads/core/: manager.py
ads/core/logger/: logger.py
ads/detect_algs/: detect_system.py
ads/detect_algs/dwt_mlead/: algorithm.py  dwt_mlead.py
ads/detect_algs/triple_es/: algorithm.py  model.py
ads/filter/: config.py
ads/filter/doc/: help.md
ads/input/: interface.py
ads/input/csv/: __init__.py  data.py  data_processor.py  manager.py  worker.py
ads/input/csv/files/: bgl_test_data.pkl  brute_forse_test_data.pkl  brute_forse_train_data.pkl  brute_forse_val_data.pkl  secrepo_access_test_data.pkl  secrepo_access_train_data.pkl  secrepo_access_val_data.pkl
ads/input/elastic/: __init__.py  conn.py  core.py  exceptions.py  manager.py  queries.py
ads/input/simulation/: __init__.py  generate.py  manager.py  update_generators.py
ads/input/simulation/files/: tmp.md
ads_celery/: pyproject.toml  tasks.py
ads_celery/ci/: Dockerfile  docker-compose.yml
ads_celery/logger/: conf.py
docs/: notification_system.md  user_guide.md
visualization/: Dockerfile  app.py  requirements.txt
